# django-moj-irat

./: LICENSE  Makefile  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
moj_irat/: healthchecks.py  views.py
moj_irat/tests/: test_healthchecks_json.py  test_ping_json.py  urls.py  utils.py
tests/: __init__.py  __main__.py  test_healthchecks_json.py  test_ping_json.py  urls.py  utils.py
tests/app/: healthchecks.py
