[metadata]
name = django-moj-irat
version = attr: moj_irat.__version__
url = https://github.com/ministryofjustice/django-moj-irat
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = Tools to support adding a Django-based service to Ministry of Justice’s Incidence Response and Tuning
long_description = file: README.rst
license = MIT
keywords =
    django
    irat
    moj
    monitoring
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
packages =
    moj_irat
include_package_data = true
install_requires =
    Django>=2.2,<5.2
    requests

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 10
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
